--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -1,1 +1,19 @@
-
+name: test project
+on:
+  push
+  workflow_dispatch
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: get code
+        uses: actions/checkout@v4
+      - name: install node js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - name: install dependencies
+        run: npm ci
+      - name: run tests
+        run: npm test
+      
