--- a/.github/workflows/expressionsAndContextObjects.yaml
+++ b/.github/workflows/expressionsAndContextObjects.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: output github context
-        run: "${{ toJSON(github) }}""  
+        run: "${{ toJSON(github) }}" 
