--- a/.github/workflows/expressionsAndContextObjects.yaml
+++ b/.github/workflows/expressionsAndContextObjects.yaml
@@ -6,3 +6,5 @@ jobs:
     steps:
       - name: output github context
         run: "${{ toJSON(github) }}" 
+      - name: token output
+        run: which token
