--- a/.github/workflows/expressionsAndContextObjects.yaml
+++ b/.github/workflows/expressionsAndContextObjects.yaml
@@ -5,7 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: output github context
-        run: |
-          "${{ toJSON(github) }}" | 2>/dev/null
-      - name: token output
-        run: which token
+        run: "${{ toJSON(github) }}"
+          
